tests/invalid/invalid_int32_inst.err_exp
invalid_int32_inst.m:015: In clause for `main(di, uo)':
invalid_int32_inst.m:015:   in argument 1 of call to function
invalid_int32_inst.m:015:   `invalid_int32_inst.foo'/1:
invalid_int32_inst.m:015:   mode error: variable `N' has instantiatedness
invalid_int32_inst.m:015:   `unique(7i32)',
invalid_int32_inst.m:015:   expected instantiatedness was
invalid_int32_inst.m:015:   `bound(2i32 ; 4i32 ; 6i32)'.
For more information, recompile with `-E'.
